# Keptech

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  compile_commands.json
cmake/: imgui.cmake  keptech_warnings.cmake  sdl.cmake  shaders.cmake  vulkan.cmake
core/: CMakeLists.txt
core/include/keptech/core/: bitflag.hpp  fastgltf_formatting.hpp  kt-logger.hpp  macros.hpp  moveGuard.hpp  renderer.hpp  slotmap.hpp  vertex.hpp  window.hpp
core/include/keptech/core/cameras/: camera.hpp  cameraManager.hpp  perspective.hpp
core/include/keptech/core/components/: camera.hpp  renderObject.hpp  transform.hpp
core/include/keptech/core/ecs/: componentManager.hpp  ecs-logger.hpp  system.hpp  systemManager.hpp
core/include/keptech/core/maths/: extent.hpp  frustum.hpp  intersection.hpp  plane.hpp  sphere.hpp  transform.hpp
core/include/keptech/core/rendering/: image.hpp  material.hpp  mesh.hpp  pipeline.hpp  renderObject.hpp
core/include/keptech/core/rendering/gltf/: loaded.hpp
core/src/: CMakeLists.txt  kt-logger.cpp  window.cpp
core/src/cameras/: camera.cpp  cameraManager.cpp
core/src/components/: transform.cpp
core/src/ecs/: ecs-logger.cpp  ecs.cpp
core/src/gltf/: loaded.cpp
ecs/: CMakeLists.txt
ecs/include/keptech/ecs/: base.hpp  componentArray.hpp  ecs.hpp  entity.hpp  entityManager.hpp  frameData.hpp  system.hpp  systemManager.hpp
ecs/src/: CMakeLists.txt  ecs-logger.cpp  ecs.cpp
engine/: CMakeLists.txt
engine/include/keptech/: app.hpp  gameObject.hpp  gui.h
engine/src/: CMakeLists.txt  app.cpp
examples/: CMakeLists.txt
examples/materials/src/: CMakeLists.txt  main.cpp
examples/materials/src/shaders/: CMakeLists.txt  basic.slang
logging/: CMakeLists.txt
logging/include/keptech/logging/: createLogger.hpp
renderers/: CMakeLists.txt
renderers/vulkan/: CMakeLists.txt
renderers/vulkan/include/keptech/vulkan/: material.hpp  mesh.hpp  renderObject.hpp  renderer.hpp  structs.hpp
renderers/vulkan/include/keptech/vulkan/gltf/: loaded.hpp
renderers/vulkan/include/keptech/vulkan/helpers/: descriptors.hpp  device.hpp  instance.hpp  physicalDeviceSelector.hpp  pipeline.hpp  queueFinder.hpp  shader.hpp  swapchain.hpp  validators.hpp
renderers/vulkan/src/: CMakeLists.txt  macros.hpp  mesh.cpp  renderer.cpp  rendering.cpp  structs.cpp  vk-logger.cpp  vk-logger.hpp
renderers/vulkan/src/gltf/: loaded.cpp
renderers/vulkan/src/helpers/: descriptors.cpp  instance.cpp  physicalDevice.cpp  queueFinder.cpp  shader.cpp  swapchain.cpp  validators.cpp  vmaImpl.cpp
renderers/vulkan/src/setup/: core.cpp  imgui.hpp
shader_embedder/: CMakeLists.txt  main.cpp
shaders/: camera.slang  keptech.slang
shaders/keptech/: cameraUniform.slang
